# users_posts_project

./: .env.example  .gitignore  README.md  UserPostExam.postman_environment.json  UsersPostsAPI.postman_collection.json  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg
backend/apps/auth/: urls.py  views.py
backend/apps/chat/: consumers.py  routing.py
backend/apps/post/: models.py  serializers.py  urls.py  views.py
backend/apps/post/migrations/: 0001_initial.py  0002_alter_postphotomodel_photo.py
backend/apps/user/: filters.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/user/migrations/: 0001_initial.py  0002_alter_profilemodel_phone.py  0003_alter_usermodel_is_active.py  0004_alter_usermodel_options_profilemodel_city_and_more.py  0005_profilemodel_birthday.py  0006_alter_profilemodel_city_alter_profilemodel_country.py  0007_usermodel_last_logout.py  0008_profilemodel_photo.py  0009_alter_profilemodel_photo.py  0010_alter_profilemodel_age_alter_profilemodel_name_and_more.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_conf/: celery_conf.py  email_conf.py  rest_conf.py
backend/core/: pagination.py
backend/core/enums/: action_token_enum.py  regex_enum.py
backend/core/exceptions/: jwt_exception.py
backend/core/handlers/: error_handler.py
backend/core/management/commands/: wait_db.py
backend/core/services/: email_service.py  file_service.py  jwt_service.py
backend/templates/: recovery.html  register.html
frontend/: vite.config.ts
